# trivialapi

./: .gitignore  README.md  pyproject.toml  unittest.sh
.github/workflows/: python-publish.yml
src/pytoda/: commodity.py  core.py  payment.py  token.py  twin.py  util.py
src/trivialapi/: util.py
src/trivialapi/fleetdm/: core.py
src/trivialapi/toda/: core.py  payment.py  util.py
src/trivialapi/unified/: api.py  core.py  util.py
tests/: test_basics.py  test_unified.py
