[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trivialapi"
version = "0.0.12"
authors = [
  { name="inaimathi", email="leo.zovic@gmail.com" },
]
description = "A trivial set of API bindings for things I use. So far, TODA and FleetDM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "pyyaml"]

[project.urls]
Homepage = "https://github.com/inaimathi/trivialapi"
Issues = "https://github.com/inaimathi/trivialapi/issues"